# BONSAI_values_icd10_split

./: .gitignore  ABLATION_EXECUTION_GUIDE.md  ABLATION_FRAMEWORK.md  COMPLETE_SETUP_SUMMARY.md  DISEASE_FILTERING_GUIDE.md  DRY_RUN_SUMMARY.md  Data sanity check.ipynb  END_TO_END_DATA_FLOW.md  EPIMAP_INTEGRATION_GUIDE.md  INTEL_MAC_SETUP.md  MULTI_MODEL_ABLATION_DESIGN.md  PIPELINE.md  QUICK_START.md  README.md  README_DRY_RUN_WORKFLOW.md  SETUP_LOCAL.md  STATUS_FINAL.md  VALUE_INJECTION_METHODS_DESIGN.md  baseline_finetuning_complete.sh  build_index_from_drawdate.py  build_mortality_horizon.py  build_outcomes_from_survival.py  check_leakage.py  create_value_injection_finetuning_configs.py  inject_conditions_into_meds.py  pyproject.toml  run_all.sh  run_baseline_finetuning.py  run_condition.sh  setup_env.sh  setup_intel_mac.sh  submit_baseline_finetuning.sh  test_pretrain.py  validate_inputs.py
archive/: QUICK_BASELINE_RUN.md  VALUE_INJECTION_FINETUNING.md  align_value_injection_to_meds.sh  baseline_finetuning_complete.sh  create_condition_finetuning_configs.sh  finetune_condition.sh
corebehrt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
corebehrt/ablation/: batch_ablation_runner.py
corebehrt/analysis/: __init__.py  feature_comparison.py
corebehrt/configs/: ablation_diabetes_meds.yaml  ablation_heart_failure.yaml  create_data.yaml  create_data_baseline.yaml  create_data_deep_embeddings.yaml  create_data_dmi.yaml  create_data_episcores.yaml  create_data_grimage_v2.yaml  create_data_maple_predictions.yaml  finetune.yaml  (+51 more)
docs/: DRYRUN_GUIDE.md
outputs/: quick_demo_comparison.csv  simplified_pipeline_comparison.csv
scripts/: create_disease_stratified_ablation.py  generate_ablation_configs.py  generate_synthetic_data_examples.py  quick_end_to_end_demo.py  quick_evaluation_demo.py  run_end_to_end_pipeline.py  run_finetune_step6.py  run_full_ablation_with_methods.py  simplified_end_to_end_demo.py
(+178 files in other folders)
